--- a/client/src/components/layout/Header.css
+++ b/client/src/components/layout/Header.css
@@ -1,7 +1,9 @@
 .header{
-    background-color: #222;
-    color: #fff;
-    text-align: center;
-    font-size: 30px;
-    padding: 40px;
+    font-size: 32px;
+}
+
+.navbar-brand{
+    font-size: 40px;
+    color: rgb(29, 13, 255);
+    cursor: pointer;
 }
