--- a/client/src/index.css
+++ b/client/src/index.css
@@ -83,9 +83,40 @@
 
 .btn {
   padding: 10px;
+  margin-top: 10px;
   color: white;
   border-radius: 5px;
   font-size: 20px;
   font-weight: 700;
   background-color: rgb(0, 0, 0);
+}
+
+.container {
+  padding: 40px;
+}
+.page-title {
+  text-align: center;
+  padding-top: 60px;
+  font-size: 40px;
+  font-weight: 700;
+  font-family: "Poppins", sans-serif;
+}
+
+.page-sub-title {
+  padding-top: 10px;
+  font-size: 26px;
+  font-weight: 700;
+  font-family: "Poppins", sans-serif;
+}
+
+.contact {
+  padding-top: 40px;
+  padding-bottom: 40px;
+  font-size: 20px;
+  font-family: "Poppins", sans-serif;
+}
+
+.contact a {
+  text-decoration: none;
+  color: black;
 }
