--- a/client/src/index.css
+++ b/client/src/index.css
@@ -104,6 +104,7 @@
 
 .page-sub-title {
   padding-top: 10px;
+  padding-left: 20px;
   font-size: 26px;
   font-weight: 700;
   font-family: "Poppins", sans-serif;
@@ -119,4 +120,11 @@
 .contact a {
   text-decoration: none;
   color: black;
+}
+
+.page-content {
+  padding: 10px;
+  margin-left: 20px;
+  font-size: 22px;
+  font-family: "Poppins", sans-serif;
 }
