--- a/client/src/index.css
+++ b/client/src/index.css
@@ -128,3 +128,12 @@
   font-size: 22px;
   font-family: "Poppins", sans-serif;
 }
+
+.row-image {
+  padding: 40px;
+}
+
+.file-input {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
